--- a/packages/clickhouse-server.yaml
+++ b/packages/clickhouse-server.yaml
@@ -41,16 +41,14 @@ contents:
   dst: /etc/clickhouse-server/config.xml
 - src: root/etc/clickhouse-server/users.xml
   dst: /etc/clickhouse-server/users.xml
-- src: root/clickhouse-server.init
+- src: clickhouse-server.init
   dst: /etc/init.d/clickhouse-server
-- src: root/etc/systemd/system/clickhouse-server.service
+- src: clickhouse-server.service
   dst: /lib/systemd/system/clickhouse-server.service
 - src: root/usr/bin/clickhouse-copier
   dst: /usr/bin/clickhouse-copier
 - src: root/usr/bin/clickhouse-report
   dst: /usr/bin/clickhouse-report
-- src: root/usr/bin/clickhouse-server
-  dst: /usr/bin/clickhouse-server
 - src: root/usr/bin/clickhouse-server
   dst: /usr/bin/clickhouse-server
 # docs
